Fix nav bug using z-index

--- a/src/Bar.scss
+++ b/src/Bar.scss
@@ -1,6 +1,7 @@
-.bar-sticky__wrapper {
+.bar-wrapper {
   top: 0;
   position: sticky;
+  z-index: 1;
   
   .bar {
     height: 10vh;
@@ -10,6 +11,7 @@
     justify-content: center;
     align-items: center;
     position: sticky;
+    border-bottom: 1px solid lightgrey;
     
     .bar__logo {
       width: 30vw;
