--- a/src/Socials.scss
+++ b/src/Socials.scss
@@ -6,9 +6,6 @@
   align-content: center;
   width: 70vw;
   bottom: 2vh;
-  background-color: blue;
-  z-index: 0;
-
 
   .social__icon {
     font-size: 4vh;
